# finance-challange-week1

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ReportSubmissionGuideline.md  repo_structure.md
models/trained/: sentiment_rf_v1_20251125_211630.joblib  sentiment_rf_v1_20251125_211630_meta.json
notebook/: eda-sentiment-analysis.ipynb  practice.ipynb  sentiment_analysis.ipynb
notebooks/: 01_eda_news.ipynb  02_eda_stock_data.ipynb  03_eda_correlation.ipynb
scripts/: __init__.py  data_loader.py  model.py  plot_util.py  preprocess.py  train.py  utils.py
src/fnsa/data/: alignment.py  loader.py  preprocessing.py
src/fnsa/features/: builder.py  sentiment.py  text_analysis.py
src/fnsa/models/: evaluate.py  evaluator.py  model_saver.py  predict.py  sentiment_model.py  train.py
src/fnsa/pipelines/: quantitative_analysis.py
src/fnsa/utils/: __init__.py  analysis.py  generate_sample.py  plot_util.py  plotting.py
tests/: debug_merge.py  test_data_loader.py  test_features.py  test_generate_sample.py  test_preprocessing.py  test_repo.py  test_text_analysis.py  verify_task3.py
